[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "asyncio>=4.0.0",
    "datasets>=4.4.2",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-genai>=1.56.0",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "sacrebleu>=2.5.1",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.1",
    "torch==2.8.0",
    "transformers>=4.57.3",
]
